# bump

./: Cargo.toml  README.md  bump.yml
docs/: bump-enhancements.md  design.md
src/: cargo.rs  cli.rs  git.rs  main.rs  version.rs
