[package]
name = "bump"
version = "0.1.7"
edition = "2024"
authors = ["Scott Idler <scott.idler@gmail.com>"]
build = "build.rs"
description = "Bump semantic versions in Cargo.toml, commit, and tag"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.29"
semver = "1.0"
tempfile = "3.16"
toml_edit = "0.22"

[dev-dependencies]

[build-dependencies]
